fix: table alignment with loader issue

--- a/src/features/pages/home/live-pricing/table-component/live-pricing.module.scss
+++ b/src/features/pages/home/live-pricing/table-component/live-pricing.module.scss
@@ -1,6 +1,10 @@
 @use 'features/styles/theme/theme-mixins' as *;
 @import 'features/styles/theme/variables';
 
+.table_container{
+  display: flex;
+  flex-direction: column;
+}
 .table_row_header{
     background-color: $color-white-1;
     border-start-start-radius: 16px;
